<resources>
    <string name="app_name">LokisApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="atau">atau</string>
    <string name="masuk_dengan_google">MASUK DENGAN GOOGLE</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="tidak_punya_akun">Tidak Punya Akun ? </string>
    <string name="daftar">Daftar</string>
    <string name="daftar_akun">Sign Up</string>
    <string name="sudah_punya_akun">Sudah Punya Akun ?</string>
    <string name="place_api">AIzaSyBb5QesSS48KdKCS23QHdFFrkecgM_XFbA</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="lewati">Lewati</string>
    <string name="destinasi_wisata_disekitarmu">Destinasi Wisata Disekitarmu</string>
    <string name="desc_one">Temukan Destinasi wisata terdekat yang ada disekitar mu. Kamu mungkin saja bisa menemukan tempat-tempat wisata yang belum terkenal namun ternyata sangat bagus.</string>
    <string name="title_two">Sesuaikan Dengan Kantong</string>
    <string name="desc_two">Kamu bisa memilih lokasi wisata yang sesuai dengan budget yang kamu miliki loh! kamu ga perlu khawatir lagi untuk bisa berlibur dan melepaskan semua penat mu.</string>
    <string name="title_three">Pilih Wisata Sesukamu!</string>
    <string name="desc_three">Tentu saja kamu bisa memilih tempat wisata yang kamu inginkan sendiri kok. Kemudian aplikasi kami akan memberikan rekomendasi rute terbaik dan paling efisien untuk sampai kesemua tempat</string>
    <string name="mulai_sekarang">Mulai Sekarang!</string>
    <string name="lokasi_kamu">Lokasi Kamu</string>
    <string name="none">None</string>
    <string name="reset_password">Reset Password</string>
    <string name="username">Username</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="masukkan_password_anda">Masukan Password Anda</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="masukkan_email_baru_anda">Masukan Email Baru Anda</string>
    <string name="update_email">Update Email</string>
    <string name="update_password">Update Password</string>
    <string name="new_password_confirm">New Password Confirm</string>
    <string name="new_password">New Password</string>
    <string name="masukkan_password_baru_anda">Masukan Password Baru Anda</string>
    <string name="daftar_wisata">Rekomendasi</string>
    <string name="wisata">Daerah Wisata</string>
    <string name="NamaWisata">Nama Tempat Wisata</string>
    <string name="rekomendasi_wisata_buat_kamu">Rekomendasi Wisata Buat Kamu</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="detail_wisata">Detail Wisata</string>
    <string name="name">Name</string>
    <string name="rating">Rating</string>
    <string name="description">Deskripsi</string>
    <string name="masukkan_wisata_yang_anda_cari">Masukan Wisata Yang Anda Dicari</string>

</resources>